--- a/3-Nodejs-Express/3.5-Phone-Book/package.json
+++ b/3-Nodejs-Express/3.5-Phone-Book/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "3.3-phone-book",
+  "name": "3.5-phone-book",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev" : "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
