--- a/3-Nodejs-Express/3.6-Phone-Book/package.json
+++ b/3-Nodejs-Express/3.6-Phone-Book/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "3.3-phone-book",
+  "name": "3.6-phone-book",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+     "dev": "nodemon run index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
