--- a/3-Nodejs-Express/3.7-Phone-Book/package.json
+++ b/3-Nodejs-Express/3.7-Phone-Book/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "3.3-phone-book",
+  "name": "3.7-phone-book",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
