--- a/aPlayground/package.json
+++ b/aPlayground/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "node-repl": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
