--- a/2-More-React/2.16-Build-Phone-Book/.vscode/settings.json
+++ b/2-More-React/2.16-Build-Phone-Book/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "appService.defaultWebAppToDeploy": "undefined/subscriptions/71fef7c7-16d9-4407-9338-4ac487f60cd1/resourceGroups/appsvc_linux_centralus_basic/providers/Microsoft.Web/sites/3-11-fullstack-vs-1",
-    "appService.deploySubpath": "."
+    "appService.deploySubpath": ".",
+    "appService.zipIgnorePattern": [
+        "node_modules{,/**}",
+        ".vscode{,/**}"
+    ]
 }
