--- a/3-Nodejs-Express/3.13-Phone-Book/package.json
+++ b/3-Nodejs-Express/3.13-Phone-Book/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "3.8-phone-book",
+  "name": "3.13-phone-book",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "model": "nodemon ./models/person.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   },
