--- a/5-Frontend/5.12-Blog-List-Frontend/package.json
+++ b/5-Frontend/5.12-Blog-List-Frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "5-11-Blog-List-Frontend",
+  "name": "5-12-Blog-List-Frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
