removed redundant files in 5.23 that were in tests/

--- a/5-Frontend/5.21-Playwright/package.json
+++ b/5-Frontend/5.21-Playwright/package.json
@@ -1,1 +1,17 @@
-../5.20-Playwright/package.json
+{
+  "name": "5.17-playwright",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "playwright test",
+    "test:report": "playwright show-report"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@playwright/test": "^1.44.1",
+    "@types/node": "^20.12.12"
+  }
+}
