--- a/7-Router-CostumHooks-CSS-Webpack/7.10-Redux-Refactor/frontend/package.json
+++ b/7-Router-CostumHooks-CSS-Webpack/7.10-Redux-Refactor/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "playwright test",
+    "test": "cd playwrite-tests/ && playwright test",
     "test:report": "playwright show-report"
   },
   "dependencies": {
